chore(app): fix modal blurryness

--- a/src-tauri/www/styles/styles.css
+++ b/src-tauri/www/styles/styles.css
@@ -343,9 +343,8 @@ button {
 
 .modal {
   position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 20%;
+  left: 35%;
   background: #fff;
   border-radius: 8px;
 }
